--- a/src/css/parts/display.scss
+++ b/src/css/parts/display.scss
@@ -1,4 +1,5 @@
 .computer__display {
+  position: relative;
   box-shadow: 0 0 7px 2px $colorGrey2;
   background-color: $colorBlack;
   border: 2px solid $colorGreen;
@@ -24,7 +25,7 @@
   color: $colorBlack;
   border-color: $colorGrey;
   font-size: 16pt;
-  width: 680px;
+  width: 676px;
   height: 276px;
 
   & > audio {
@@ -243,6 +244,19 @@
   animation: rotateRight 4s infinite alternate;
 }
 
+.display__map {
+  position: absolute;
+  border-radius: 20px;
+  top: 18px;
+  left: 163px;
+  width: 350px;
+  height: 240px;
+  overflow: hidden;
+}
+
+ymaps {
+  color: $colorBlack;
+}
 .display_calculator {
   display: flex;
   flex-direction: column;
