--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -60,13 +60,13 @@
 }
 
 .startModalWindow {
-  position: fixed;
+  position: absolute;
   background-color: rgb(172, 213, 100);
-  width: 20vw;
-  height: 30vh;
+  width: 250px;
+  height: 250px;
   padding: 5px 10px 10px;
-  top: 35vh;
-  left: 40vw;
+  top: calc((100vh - 250px) / 2);
+  left: calc((100vw - 250px) / 2);
   border: 2px solid $colorGrey2;
   border-radius: 10px;
   box-shadow: 0 0 15px 8px $colorGrey2;
@@ -76,6 +76,8 @@
   transition: all 0.3s ease 0s;
   z-index: 101;
 
+  @media (max-width: px) {
+  }
   &:hover {
     transform: scale(1.05);
   }
