--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1402,7 +1402,7 @@ div[class^=note] .image_4 {
 }
 
 .startModalWindow {
-  position: absolute;
+  position: fixed;
   background-color: rgb(172, 213, 100);
   width: 250px;
   height: 250px;
