--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -60,7 +60,7 @@
 }
 
 .startModalWindow {
-  position: absolute;
+  position: fixed;
   background-color: rgb(172, 213, 100);
   width: 250px;
   height: 250px;
