--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 .computer__display {
   position: relative;
   box-shadow: 0 0 7px 2px rgb(146, 140, 140);
@@ -1390,49 +1391,74 @@ div[class^=note] .image_4 {
   grid-column: 1;
 }
 
-.podlogka {
-  position: absolute;
+/* Стили модального окна
+-------------------------------------------------------------------------------*/
+.dm-overlay {
+  position: fixed;
   top: 0;
   left: 0;
-  width: 1920px;
-  height: 1080px;
-  background: rgb(255, 255, 255);
-  opacity: 0.6;
-  z-index: 100;
+  background: rgba(0, 0, 0, 0.65);
+  display: block;
+  overflow: auto;
+  width: 100%;
+  height: 100%;
+  z-index: 1000;
 }
 
-.startModalWindow {
-  position: fixed;
-  background-color: rgb(172, 213, 100);
-  width: 250px;
-  height: 250px;
-  padding: 5px 10px 10px;
-  top: calc((100vh - 250px) / 2);
-  left: calc((100vw - 250px) / 2);
-  border: 2px solid rgb(146, 140, 140);
+/* блочная таблица */
+.dm-table {
+  display: table;
+  width: 100%;
+  height: 100%;
+}
+
+.dm-cell {
+  display: table-cell;
+  padding: 0 1em;
+  vertical-align: middle;
+  text-align: center;
+}
+
+.dm-modal {
+  display: inline-block;
+  position: relative;
+  padding: 30px 20px;
+  max-width: 50em;
+  background: #6ad58f;
+  box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.22), 0px 19px 60px rgba(0, 0, 0, 0.3);
   border-radius: 10px;
-  box-shadow: 0 0 15px 8px rgb(146, 140, 140);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  transition: all 0.3s ease 0s;
-  z-index: 101;
+  text-align: left;
 }
-.startModalWindow:hover {
-  transform: scale(1.05);
-}
-.startModalWindow > * {
-  color: #000;
+.dm-modal > p {
+  text-align: center;
   font-size: 20pt;
+  color: #455359;
 }
-.startModalWindow > span {
+
+.close {
   position: absolute;
   top: 5px;
-  right: 10px;
-  text-align: right;
+  right: 5px;
+  z-index: 9999;
+  float: right;
+  width: 25px;
+  height: 25px;
+  color: #686767;
+  text-align: center;
+  text-decoration: none;
+  line-height: 21px;
   cursor: pointer;
 }
-.startModalWindow > h1 {
-  font-size: 20pt;
-  text-align: center;
+
+.close:after {
+  display: block;
+  border: 1px solid #000000;
+  border-radius: 50%;
+  content: "X";
+  transition: all 0.6s;
+  transform: scale(0.85);
+}
+
+.close:hover:after {
+  transform: scale(1);
 }/*# sourceMappingURL=style.css.map */
